...
      </View>
    );
  }

  return (
    <ScrollView
      testID="match-details-screen"
      style={styles.screen}
      stickyHeaderIndices={[1]}
      showsVerticalScrollIndicator={false}
    >
      <View style={styles.headerWrap}>
        <MatchDetailsHeader
...
