...
            />
            <TabItem
                label={resolvedMatchsLabel}
                selected={selectedTab === 'matchs'}
                onPress={() => onChangeTab('matchs')}
                styles={styles}
                testID="player-details-tab-matchs"
            />
            <TabItem
                label={resolvedStatsLabel}
                selected={selectedTab === 'stats'}
                onPress={() => onChangeTab('stats')}
                styles={styles}
                testID="player-details-tab-stats"
            />
            <TabItem
                label={resolvedCarriereLabel}
                selected={selectedTab === 'carriere'}
                onPress={() => onChangeTab('carriere')}
                styles={styles}
...
