...
    );
  }

  return (
    <View
      style={[playerDetailsScreenStyles.container, { backgroundColor }]}
      testID='player-details-screen'
    >
      <PlayerHeader
        profile={screenModel.profile}
        isFollowed={screenModel.isPlayerFollowed}
        onBack={onBack}
        onToggleFollow={screenModel.handleToggleFollow}
...
